--- a/project-manager.html
+++ b/project-manager.html
@@ -40,6 +40,18 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://evbox.recruitee.com/o/technical-project-manager-dc-charging'>
+      Technical Project Manager - DC Charging - EVBox
+    </a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-26</p>
+<hr/>
+<h5><a href='https://evbox.recruitee.com/o/technical-project-manager-ac-charging-amsterdam'>
+      Technical Project Manager - AC Charging - EVBox
+    </a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-26</p>
+<hr/>
 <h5><a href='https://incresearch.referrals.selectminds.com/jobs/sr-project-manager-ophthalmology-us-or-canada-30218'>Sr Project Manager (Ophthalmology- US or Canada) - Syneos Health Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
@@ -90,7 +102,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://kimmel-associates.breezy.hr/p/f6462bb6e6cb-assistant-project-manager'>Assistant Project Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://kimmel-associates.breezy.hr/p/f6462bb6e6cb-assistant-project-manager'>Assistant Project Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -134,7 +146,7 @@
 <p><span class="badge badge-light">San Francisco California</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/linkedin/job/oLuCafwL'>LinkedIn Careers - Global Talent Organization PMO ? Program Manager</a></h5> 
+<h5><a href='https://jobs.jobvite.com/linkedin/job/oLuCafwL'>LinkedIn Careers - Global Talent Organization PMO ? Program Manager</a></h5> 
 <p><span class="badge badge-light">Sunnyvale California</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -260,7 +272,7 @@ Project Office for the Physician Group Practices within Emory Healthcare and?...
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/premisehealth/job/oh5pafwF'>Premise Health Careers - Senior Project Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/premisehealth/job/oh5pafwF'>Premise Health Careers - Senior Project Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -268,7 +280,7 @@ Project Office for the Physician Group Practices within Emory Healthcare and?...
 <p><span class="badge badge-light">San Mateo California</span></p>
 <p>Posted on:: 2019-07-24</p>
 <hr/>
-<h5><a href='https://botify-jobs.workable.com/j/7B7438CBC6'>Botify - Jobs: Client Delivery Manager/Project Manager - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://botify-jobs.workable.com/j/7B7438CBC6'>Botify - Jobs: Client Delivery Manager/Project Manager - Apply online</a></h5> 
 <p><span class="badge badge-light">New York, United States</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -296,7 +308,7 @@ Project Office for the Physician Group Practices within Emory Healthcare and?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://oyorooms.recruiterbox.com/jobs/fk03fl8/'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://oyorooms.recruiterbox.com/jobs/fk03fl8/'>
     Construction Project Manager  at OYO
 </a></h5> 
 <p><span class="badge badge-light">Newcastle upon Tyne, England</span></p>
@@ -356,7 +368,7 @@ Project Office for the Physician Group Practices within Emory Healthcare and?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://frb.referrals.selectminds.com/jobs/it-strategy-program-manager-9375'>IT Strategy Program Manager - The Federal Reserve System Careers</a></h5> 
+<h5><a href='https://frb.referrals.selectminds.com/jobs/it-strategy-program-manager-9375'>IT Strategy Program Manager - The Federal Reserve System Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -366,7 +378,7 @@ Project Office for the Physician Group Practices within Emory Healthcare and?...
 Assistant Project Manager for the Houston, Texas, market. The company 
 specializes in?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://kimmel-associates.breezy.hr/p/ede649480d42-project-manager?source=GoogleJobs'>Project Manager</a></h5> 
+<h5><a href='https://kimmel-associates.breezy.hr/p/ede649480d42-project-manager?source=GoogleJobs'>Project Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... About the Company: A roofing and building envelope subcontractor specializing 
 in roofing, waterproofing & restoration with a project portfolio consisting of?...</p>
@@ -426,7 +438,7 @@ of data types including speech, text, image and video. With deep expertise in?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://icrossing-2.workable.com/j/CF498DB7F0'>iCrossing - Jobs: Project Manager - Apply online</a></h5> 
+<h5><a href='https://icrossing-2.workable.com/j/CF498DB7F0'>iCrossing - Jobs: Project Manager - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -477,14 +489,6 @@ new program management office to support the NIH. On our team, you'll monitor?..
 <hr/>
 <h5><a href='https://jobs.lever.co/welocalize/9f98440a-7826-4978-b412-decc623485f1'>Welocalize - Program Manager</a></h5> 
 <p><span class="badge badge-light">Tokyo, Japan</span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/welocalize/df74fb11-abcc-4bcc-b60b-5ef0d7189bb7'>Welocalize - Project Manager</a></h5> 
-<p><span class="badge badge-light">Beijing North America</span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/AveryDennison/743999692222710-project-manager-rfid'>Avery Dennison Project Manager RFID | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
 
